HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestMalformedArgument/Expected.uv
//! Expected diagnostic metadata for the TestMalformedArgument rejected-source specimen.

expectedDiagnostic("E-TST-0101", "diagnostics.TestAttributes")
expectedDiagnostic("E-TST-0101", "def.TestAttributeArgsOk")
